# prodwatch

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  function_logger.py  input_module.py  pyproject.toml  request_function_watch.py  request_injection.py  run_prodwatch.py  run_profiler.py  run_simple_profiling.py  test_function_logger.py  test_input_module.py  test_request_injection.py  test_script.py  test_watch_function.py
app/: __init__.py  app.py
prodwatch/: __init__.py  function_injector.py  handle_ipc.py  prodwatch.py
prodwatch/injection/: function_injector.py  function_watcher.py
prodwatch/ipc/: server.py
prodwatch/listener/: listener.py  system_identification.py
prodwatch/manager/: __init__.py  function_manager.py  listener.py  manager.py
prodwatch/module_loader/: loader.py
prodwatch/polling/: server.py
prodwatch/profiling/: simple_profiler.py
prodwatch/watcher/: __init__.py  function_watcher.py
prodwatch/web/: app.py  inputs.py  rendering.py
server/: starlette_app.py
server/views/: add_watcher_form.py  function_calls.py  process_list.py  render_html.py  watcher.py
src/prodwatch/: __init__.py  logging_config.py
tests/: conftest.py  fixtures.py  test_function_injector.py  test_prodwatch.py
tests/injection/: test_function_injector.py
tests/ipc/: test_server.py
tests/listener/: test_listener.py  test_system_identification.py
tests/manager/: test_function_manager.py  test_function_watcher.py  test_listener.py  test_manager.py  test_system_identification.py  test_token_handling.py
tests/polling/: test_server.py
tests/profiler/: test_simple_profiler.py
tests/profiling/: test_simple_profiler.py
tests/server/: test_app.py
tests/watcher/: test_function_watcher.py  test_listener.py  test_system_identification.py
tests/web/: test_app.py
web/: starlette_app.py
web/data/: simple_store.py
(+46 files in other folders)
