[project]
name = "prodwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.2",
    "mypy>=1.13.0",
    "pydantic>=2.9.2",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "python-multipart>=0.0.17",
    "requests>=2.32.3",
    "starlette>=0.41.2",
    "types-requests>=2.32.0.20241016",
    "uvicorn>=0.32.0",
]
